fixing overflow issues on some post content

--- a/client-assets/client.scss
+++ b/client-assets/client.scss
@@ -68,6 +68,12 @@ a:hover {
 	animation-name: slideInUp;
 }
 
+@media only screen and (max-width: 414px) {
+	.entry-content {
+		max-width: 100vw;
+	}
+}
+
 /****************************************************************************************/
 /* nav header */
 /****************************************************************************************/
@@ -1575,7 +1581,6 @@ p.wp-block-subhead,
 }
 
 /***************************************************************************************/
-
 /* WooCommerce checkout forms and form inputs */
 /***************************************************************************************/
 
